--- a/tonghop-music.html
+++ b/tonghop-music.html
@@ -128,6 +128,10 @@
             <div class="music-div" onclick="togglePlay(21)" id="playButton21">21. Mặt trời của em - Hương Ly ft JustaTee
             </div>
             <br>
+            <div class="music-div" onclick="togglePlay(22)" id="playButton22">22. Rung động - Duong EDWARD </div>
+            <br>
+            <div class="music-div" onclick="togglePlay(23)" id="playButton23">23. Vùng Ký Ức </div>
+            <br>
         </div>
         <!-- trình phát nhạc. -->
         <div class="music-list">
@@ -148,7 +152,7 @@
 
 
     <footer class="sticky-footer">
-        <p>&copy; 2023 Blog of Thanh Ruy 77.</p>
+        <p>&copy; 2024 This blog belongs to Thanh Duy.</p>
     </footer>
 
     <script>        // JavaScript để xử lý sự kiện khi click nút lên trên
@@ -275,6 +279,10 @@
                 return "./MP3/có hẹn với thanh xuân  MONSTAR  official music video.mp3";
             } else if (songIndex === 21) {
                 return "./MP3/Mặt Trời Của Em  Official MV  Phương Ly ft JustaTee.mp3";
+            } else if (songIndex === 22) {
+                return "./MP3/RUNGDONG.mp3";
+            } else if (songIndex === 23){
+                return "./MP3/Vùng Ký Ức.mp3";
             }
         }
 
