--- a/amnhac.html
+++ b/amnhac.html
@@ -35,7 +35,7 @@
         font-family: 'Courier New', Courier, monospace;
         background-color: aliceblue;
         width: 500px;
-        height: 350px;
+        height: 430px;
         display: flex;
         margin: auto;
         flex-direction: column;
@@ -87,7 +87,7 @@
             font-family: 'Courier New', Courier, monospace;
             background-color: aliceblue;
             width: 320px;
-            height: 350px;
+            height: 430px;
             display: flex;
             margin: auto;
             flex-direction: column;
@@ -119,6 +119,7 @@
         <button onclick="Tonghop_Music()">All Music</button>
         <button onclick="Englishmusic()">English Music</button>
         <button onclick="Vu_Music()">Only Vũ Music</button>
+        <button onclick="Mood_up()">Mood up Music</button>
     </div>
 
 
@@ -133,6 +134,10 @@
         }
         function Englishmusic(){
             window.location.href ="english.html"
+        }
+        function Mood_up(){
+            window.location.href ="Mood_up-music.html"
+
         }
 
         const createSnowflake = () => {
