--- a/Mood_up-music.html
+++ b/Mood_up-music.html
@@ -90,10 +90,10 @@
             <div class="music-div" onclick="togglePlay(1)" id="playButton1">1. Forever Love - Team</div> <br>
             <div class="music-div" onclick="togglePlay(2)" id="playButton2">2. Cô Gái Thanh Khiết - Đen Vâu</div><br>
             <div class="music-div" onclick="togglePlay(3)" id="playButton3">3. Vùng Ký Ức - unknown</div> <br>
-            <div class="music-div" onclick="togglePlay(4)" id="playButton4">4. Phố đã lên đèn - Huyền tâm môn  </div> <br>
-            <div class="music-div" onclick="togglePlay(5)" id="playButton5">5. Rung Động - Dương</div><br>
-            <div class="music-div" onclick="togglePlay(6)" id="playButton6">6. 3107 full album - W/n</div> <br>
-            <div class="music-div" onclick="togglePlay(7)" id="playButton7">7. Chia Xa - Dương</div> <br>
+            <div class="music-div" onclick="togglePlay(4)" id="playButton4">4. Có hẹn với thanh xuân  </div> <br>
+            <div class="music-div" onclick="togglePlay(5)" id="playButton5">5. Hạnh phúc mới - MTP</div><br>
+            <div class="music-div" onclick="togglePlay(6)" id="playButton6">6. Đợi - Vũ.</div> <br>
+            <div class="music-div" onclick="togglePlay(7)" id="playButton7">7. Lạ Lùng - Vũ.</div> <br>
             <div class="music-div" onclick="togglePlay(8)" id="playButton8">8. Bao tiền một mớ bình yên</div> <br>
             <div class="music-div" onclick="togglePlay(9)" id="playButton9">9. Anh tự do nhưng cô đơn - Đạt G</div> <br>
             <div class="music-div" onclick="togglePlay(10)" id="playButton10">10. Não cá vàng - Lou Hoàng</div>
@@ -190,13 +190,13 @@
             } else if (songIndex === 3) {
                 return "./MP3/Vùng Ký Ức.mp3";
             } else if (songIndex === 4) {
-                return "./MP3/HUYỀN TÂM MÔN _ PHỐ ĐÃ LÊN ĐÈN _ OFFICIAL AUDIO (320 kbps).mp3";
+                return "./MP3/có hẹn với thanh xuân.mp3";
             } else if (songIndex === 5) {
-                return "./MP3/RUNGDONG.mp3";
+                return "./MP3/Hạnh Phúc Mới.mp3";
             } else if (songIndex === 6) {
-                return "./MP3/3107 full album.mp3";
+                return "./MP3/ĐỢI - VŨ ORIGINAL.mp3";
             } else if (songIndex === 7) {
-                return "./MP3/CHIA XA - Dương Edward _ Remake 2021 (320 kbps).mp3"
+                return "./MP3/LẠ LÙNG  Vũ Original.mp3"
             } else if (songIndex === 8) {
                 return "./MP3/bao tiền một mớ bình yên_.mp3"
             } else if (songIndex === 9) {
